RESOLVED FIXED293228
[CSS] Fix incorrect nestedContext with CSSOM insertRule()
https://bugs.webkit.org/show_bug.cgi?id=293228
Summary [CSS] Fix incorrect nestedContext with CSSOM insertRule()
Matthieu Dubet
Reported 2025-05-19 05:05:40 PDT
We need to consider the current rule + its ancestors to find the correct nestedContext, and not only the ancestors. Failing test here : https://wpt.fyi/results/css/css-cascade/scope-nesting.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-19 05:06:04 PDT
Matthieu Dubet
Comment 2 2025-05-19 05:09:21 PDT
EWS
Comment 3 2025-05-19 10:11:00 PDT
Committed 295109@main (72f431e71d4c): <https://commits.webkit.org/295109@main> Reviewed commits have been landed. Closing PR #45585 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.