[CSS] Fix incorrect nestedContext with CSSOM insertRule() https://bugs.webkit.org/show_bug.cgi?id=293228 rdar://151604764

Reviewed by Anne van Kesteren.

We need to consider the current rule + its ancestors to find the correct nestedContext,
and not only the ancestors.

* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/at-scope-relative-syntax-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/scope-nesting-expected.txt:
* Source/WebCore/css/CSSGroupingRule.cpp:
(WebCore::CSSGroupingRule::insertRule):

Canonical link: https://commits.webkit.org/295109@main